org/kermeta/language/org.kermeta.language.checker/src/test/resources/resolved/invalid/Operation/Operation_check_callresult_01/project.kp
resource library_standard ="platform:/plugin/org.kermeta.language.library.standard" alternative "mvn:org.kermeta.language/language.library.standard/2.0.99-SNAPSHOT"
importProject library_standard
project Operation_check_callresult_01 {
	import "${project.baseUri}/001_Operation_check_callresult_01.kmt"
}
